<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Helping Hands</string>
    <string name="app_logo">Helping Hands application logo</string>
    <string name="sign_in_subtitle">Sign in to continue making a difference</string>
    <string name="helping_hands">Helping Hands</string>
    <string name="my_account">My Account</string>
    <string name="my_account_button">My Account</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="donation_count">Donation Count</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="back_to_dashboard_button">Back to Dashboard</string>
    <string name="logout">Logout</string>
    <string name="donate_title">Make a Donation</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">Enter amount</string>
    <string name="donate_money_button">Donate Money</string>
    <string name="food_donation_button">Donate Food</string>
    <string name="goods_donation_button">Donate Goods</string>
    <string name="food_donation_form">Food Donation Form</string>
    <string name="food_type">Food Type</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_label_goods">Quantity</string>
    <string name="perishable">Perishable</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="goods_donation_title">Goods Donation</string>
    <string name="goods_type_label">Goods Type</string>
    <string name="is_new_label">New Condition</string>
    <string name="description_label">Description</string>
    <string name="submit_donation_button">Submit Donation</string>
    <string name="urgent_label">URGENT: SHELTER X NEEDS FOOD!!</string>
    <string name="find_help_button">Find Help</string>
    <string name="donate_button">Donate</string>
    <string name="volunteer_button_main">Volunteer</string>
    <string name="resources_label">Resources</string>
    <string name="report_individual">Report Individual</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="gender_label">Gender</string>
    <string name="share_location">Share Location</string>
    <string name="tell_more_about_the_individual_s_condition">Tell more about the individual\'s condition</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="volunteer_title">Volunteer</string>
    <string name="volunteer_description">Help us make a difference</string>
    <string name="role_label">Role</string>
    <string name="terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="volunteer_button">Volunteer</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="already_have_account">Already have an account? Log In</string>
    <string name="log_in">Log In</string>
    <string name="forgot_username">Forgot username?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="helping_hands_logo">Helping Hands Logo</string>
    <string name="this_app_serves_as_a_bridge_between_community_members_who_are_willing_to_assist_those_in_need_and_the_relevant_organizations_offering_the_help_needed">This App serves as a bridge between community members who are willing to assist those in need and the relevant organizations offering the help needed</string>
    <string name="help_line_27_65_636_6600">Help Line: +27 65 636 6600</string>
    <string name="choose_language">Choose language</string>
    <string name="welcome_to">Welcome to Helping Hands</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="google_maps_key">YOUR_GOOGLE_MAPS_API_KEY</string>
    <string name="money_donation_title">Money Donation</string>
    <string name="back_to_donate_button">Back to Donate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="condition">Condition &amp; Notes</string>
    <string name="profile_complete">Profile Complete ✓</string>
    <string name="profile_incomplete">Profile Incomplete</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <!-- Add these to your existing strings.xml -->
    <string name="volunteer_role_label">Volunteer Role</string>
    <string name="volunteer_terms">I agree to the terms and conditions</string>
    <string-array name="volunteer_roles">
        <item>--select--</item>
        <item>Cleaning</item>
        <item>Cooking and Serving</item>
        <item>Donation Sorting</item>
        <item>Resident Support and Admin</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>IsiXhosa</item>
        <item>Afrikaans</item>
    </string-array>
    <string-array name="genders">
        <item>Select gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="conditions">
        <item>Select...</item>
        <item>Stable</item>
        <item>Critical</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="goods_types">
        <item>Clothing</item>
        <item>Blankets</item>
        <item>Hygiene Products</item>
        <item>School Supplies</item>
        <item>Other</item>
    </string-array>
    <string-array name="food_types">
        <item>Fruits and Vegetables</item>
        <item>Grains and Cereals</item>
        <item>Dairy Products</item>
        <item>Protein Foods</item>
        <item>Prepared Meals</item>
        <item>Other</item>
    </string-array>
</resources>